14th, fix not showing pngs

--- a/portfolio/src/app/section01-hero/section01-hero.component.scss
+++ b/portfolio/src/app/section01-hero/section01-hero.component.scss
@@ -2,7 +2,7 @@ body {
     background-color:  #141d2f;
     margin: 0;
     height: 100vh;
-    background-image: url('./../../assets/purpleshadowmerged.png');
+    background-image: url('assets/purpleshadowmerged.png');
     background-repeat: no-repeat;
     /*background-size: contain; /*Bei Mobilansicht einfach media query size ändern in px*/
     background-size: cover;
